{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 1446,
  "lineage": "7f03405e-32b1-0094-23c1-97e8c0870adb",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:676278186890:loadbalancer/app/mgabbas-devops-alb/9b2e01fbb54693be",
            "arn_suffix": "app/mgabbas-devops-alb/9b2e01fbb54693be",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "mgabbas-devops-alb-1169621627.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:676278186890:loadbalancer/app/mgabbas-devops-alb/9b2e01fbb54693be",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "mgabbas-devops-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0ed44fd30be766565"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02503ba9716c1627a"
              },
              {
                "subnet_id": "subnet-0464ebddf19464999"
              }
            ],
            "subnets": [
              "subnet-02503ba9716c1627a",
              "subnet-0464ebddf19464999"
            ],
            "tags": {
              "Name": "mgabbas-devops-alb"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "mgabbas-devops-alb",
              "Owner": "Muhammad Ghulam Abbas",
              "Project": "DevOps_Final"
            },
            "vpc_id": "vpc-07b8c9d9daf04cab3",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available",
            "module.security_groups.aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:676278186890:listener/app/mgabbas-devops-alb/9b2e01fbb54693be/a1cfd5b2ccc66d4a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:676278186890:listener/app/mgabbas-devops-alb/9b2e01fbb54693be/a1cfd5b2ccc66d4a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:676278186890:loadbalancer/app/mgabbas-devops-alb/9b2e01fbb54693be",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "Environment": "Dev",
              "Owner": "Muhammad Ghulam Abbas",
              "Project": "DevOps_Final"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_lb.app_alb",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available",
            "module.security_groups.aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:676278186890:listener/app/mgabbas-devops-alb/9b2e01fbb54693be/ef31c6c8b9286c9b",
            "certificate_arn": "arn:aws:acm:us-east-2:676278186890:certificate/1b542c5a-9075-4b8b-90a6-9bf78ad6b5b0",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:676278186890:targetgroup/mgabbas-devops-tg/5dcf90df853ab4b4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:676278186890:listener/app/mgabbas-devops-alb/9b2e01fbb54693be/ef31c6c8b9286c9b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:676278186890:loadbalancer/app/mgabbas-devops-alb/9b2e01fbb54693be",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {
              "Environment": "Dev",
              "Owner": "Muhammad Ghulam Abbas",
              "Project": "DevOps_Final"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_lb.app_alb",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available",
            "module.security_groups.aws_security_group.alb_sg",
            "module.target_group.aws_lb_target_group.app_tg"
          ]
        }
      ]
    },
    {
      "module": "module.alb_bi",
      "mode": "managed",
      "type": "aws_lb",
      "name": "bi_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:676278186890:loadbalancer/app/mgabbas-devops-bi-alb/12625f4e95d3c81b",
            "arn_suffix": "app/mgabbas-devops-bi-alb/12625f4e95d3c81b",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "mgabbas-devops-bi-alb-1464392860.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:676278186890:loadbalancer/app/mgabbas-devops-bi-alb/12625f4e95d3c81b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "mgabbas-devops-bi-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0ed44fd30be766565"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02503ba9716c1627a"
              },
              {
                "subnet_id": "subnet-0464ebddf19464999"
              }
            ],
            "subnets": [
              "subnet-02503ba9716c1627a",
              "subnet-0464ebddf19464999"
            ],
            "tags": {
              "Name": "mgabbas-devops-bi-alb"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "mgabbas-devops-bi-alb",
              "Owner": "Muhammad Ghulam Abbas",
              "Project": "DevOps_Final"
            },
            "vpc_id": "vpc-07b8c9d9daf04cab3",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available",
            "module.security_groups.aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.alb_bi",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:676278186890:listener/app/mgabbas-devops-bi-alb/12625f4e95d3c81b/21376f7d23c76404",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:676278186890:listener/app/mgabbas-devops-bi-alb/12625f4e95d3c81b/21376f7d23c76404",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:676278186890:loadbalancer/app/mgabbas-devops-bi-alb/12625f4e95d3c81b",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "Environment": "Dev",
              "Owner": "Muhammad Ghulam Abbas",
              "Project": "DevOps_Final"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb_bi.aws_lb.bi_alb",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available",
            "module.security_groups.aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.alb_bi",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:676278186890:listener/app/mgabbas-devops-bi-alb/12625f4e95d3c81b/fd99c555c65f0e17",
            "certificate_arn": "arn:aws:acm:us-east-2:676278186890:certificate/1b542c5a-9075-4b8b-90a6-9bf78ad6b5b0",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:676278186890:targetgroup/mgabbas-devops-bi-tg/fc49e26fab5f9d01",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:676278186890:listener/app/mgabbas-devops-bi-alb/12625f4e95d3c81b/fd99c555c65f0e17",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:676278186890:loadbalancer/app/mgabbas-devops-bi-alb/12625f4e95d3c81b",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {
              "Environment": "Dev",
              "Owner": "Muhammad Ghulam Abbas",
              "Project": "DevOps_Final"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb_bi.aws_lb.bi_alb",
            "module.alb_bi.aws_lb_target_group.bi_tg",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available",
            "module.security_groups.aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.alb_bi",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "bi_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:676278186890:targetgroup/mgabbas-devops-bi-tg/fc49e26fab5f9d01",
            "arn_suffix": "targetgroup/mgabbas-devops-bi-tg/fc49e26fab5f9d01",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "3000",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:676278186890:targetgroup/mgabbas-devops-bi-tg/fc49e26fab5f9d01",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "mgabbas-devops-bi-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "mgabbas-devops-bi-tg"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "mgabbas-devops-bi-tg",
              "Owner": "Muhammad Ghulam Abbas",
              "Project": "DevOps_Final"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-07b8c9d9daf04cab3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb_bi",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "bi_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:676278186890:targetgroup/mgabbas-devops-bi-tg/fc49e26fab5f9d01-20250614151851383300000007",
            "port": 3000,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:676278186890:targetgroup/mgabbas-devops-bi-tg/fc49e26fab5f9d01",
            "target_id": "i-0ddfe47ddf6626756"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb_bi.aws_lb_target_group.bi_tg",
            "module.bi.aws_instance.metabase_instance",
            "module.bi.data.aws_ami.amazon_linux",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available",
            "module.security_groups.aws_security_group.bi_sg"
          ]
        }
      ]
    },
    {
      "module": "module.bi",
      "mode": "managed",
      "type": "aws_instance",
      "name": "metabase_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04cb802b34301daba",
            "arn": "arn:aws:ec2:us-east-2:676278186890:instance/i-0ddfe47ddf6626756",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ddfe47ddf6626756",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "trubleshooting",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ee86701daf9b0737",
            "private_dns": "ip-10-0-1-104.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.104",
            "public_dns": "ec2-3-133-134-101.us-east-2.compute.amazonaws.com",
            "public_ip": "3.133.134.101",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Environment": "Dev",
                  "Owner": "Muhammad Ghulam Abbas",
                  "Project": "DevOps_Final"
                },
                "tags_all": {
                  "Environment": "Dev",
                  "Owner": "Muhammad Ghulam Abbas",
                  "Project": "DevOps_Final"
                },
                "throughput": 0,
                "volume_id": "vol-0a75cf1152d344f19",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0464ebddf19464999",
            "tags": {
              "Name": "mgabbas-devops-bi-instance"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "mgabbas-devops-bi-instance",
              "Owner": "Muhammad Ghulam Abbas",
              "Project": "DevOps_Final"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0394b4839f9b739fb"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.bi.data.aws_ami.amazon_linux",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available",
            "module.security_groups.aws_security_group.bi_sg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_instance",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fe972392d04329e1",
            "arn": "arn:aws:ec2:us-east-2:676278186890:instance/i-01382e964d345cab7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01382e964d345cab7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "trubleshooting",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b40aeda889da67d4",
            "private_dns": "ip-10-0-1-113.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.113",
            "public_dns": "ec2-18-218-242-26.us-east-2.compute.amazonaws.com",
            "public_ip": "18.218.242.26",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Environment": "Dev",
                  "Owner": "Muhammad Ghulam Abbas",
                  "Project": "DevOps_Final"
                },
                "tags_all": {
                  "Environment": "Dev",
                  "Owner": "Muhammad Ghulam Abbas",
                  "Project": "DevOps_Final"
                },
                "throughput": 0,
                "volume_id": "vol-014ff530454e91d62",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0464ebddf19464999",
            "tags": {
              "Name": "mgabbas-devops-nat-instance"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "mgabbas-devops-nat-instance",
              "Owner": "Muhammad Ghulam Abbas",
              "Project": "DevOps_Final"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0675da952a670ed87"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_security_group.nat_sg",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:676278186890:internet-gateway/igw-029352ebca71271aa",
            "id": "igw-029352ebca71271aa",
            "owner_id": "676278186890",
            "tags": {
              "Name": "mgabbas-devops-igw"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "mgabbas-devops-igw",
              "Owner": "Muhammad Ghulam Abbas",
              "Project": "DevOps_Final"
            },
            "vpc_id": "vpc-07b8c9d9daf04cab3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07410e5792b0182511080289494",
            "instance_id": "i-01382e964d345cab7",
            "instance_owner_id": "676278186890",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "eni-0b40aeda889da67d4",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07410e5792b018251",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_instance.nat",
            "module.network.aws_route_table.private",
            "module.network.aws_security_group.nat_sg",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:676278186890:route-table/rtb-07410e5792b018251",
            "id": "rtb-07410e5792b018251",
            "owner_id": "676278186890",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "mgabbas-devops-private-rt"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "mgabbas-devops-private-rt",
              "Owner": "Muhammad Ghulam Abbas",
              "Project": "DevOps_Final"
            },
            "timeouts": null,
            "vpc_id": "vpc-07b8c9d9daf04cab3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:676278186890:route-table/rtb-085e3f23e7afbda64",
            "id": "rtb-085e3f23e7afbda64",
            "owner_id": "676278186890",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-029352ebca71271aa",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mgabbas-devops-public-rt"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "mgabbas-devops-public-rt",
              "Owner": "Muhammad Ghulam Abbas",
              "Project": "DevOps_Final"
            },
            "timeouts": null,
            "vpc_id": "vpc-07b8c9d9daf04cab3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-010b644c8cd176567",
            "route_table_id": "rtb-07410e5792b018251",
            "subnet_id": "subnet-0adc983d3afd440c6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0507b7fece1acf1be",
            "route_table_id": "rtb-07410e5792b018251",
            "subnet_id": "subnet-0dc8e81d0fa1bd6df"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a023217c5388ddb5",
            "route_table_id": "rtb-085e3f23e7afbda64",
            "subnet_id": "subnet-0464ebddf19464999"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cf498f4c1f8b971b",
            "route_table_id": "rtb-085e3f23e7afbda64",
            "subnet_id": "subnet-02503ba9716c1627a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nat_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:676278186890:security-group/sg-0675da952a670ed87",
            "description": "Allow all traffic for NAT instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0675da952a670ed87",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "mgabbas-devops-nat-sg",
            "name_prefix": "",
            "owner_id": "676278186890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mgabbas-devops-nat-sg"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "mgabbas-devops-nat-sg",
              "Owner": "Muhammad Ghulam Abbas",
              "Project": "DevOps_Final"
            },
            "timeouts": null,
            "vpc_id": "vpc-07b8c9d9daf04cab3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:676278186890:subnet/subnet-0adc983d3afd440c6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0adc983d3afd440c6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "676278186890",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mgabbas-devops-private-1"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "mgabbas-devops-private-1",
              "Owner": "Muhammad Ghulam Abbas",
              "Project": "DevOps_Final"
            },
            "vpc_id": "vpc-07b8c9d9daf04cab3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:676278186890:subnet/subnet-0dc8e81d0fa1bd6df",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dc8e81d0fa1bd6df",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "676278186890",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mgabbas-devops-private-2"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "mgabbas-devops-private-2",
              "Owner": "Muhammad Ghulam Abbas",
              "Project": "DevOps_Final"
            },
            "vpc_id": "vpc-07b8c9d9daf04cab3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:676278186890:subnet/subnet-0464ebddf19464999",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0464ebddf19464999",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "676278186890",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mgabbas-devops-public-1"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "mgabbas-devops-public-1",
              "Owner": "Muhammad Ghulam Abbas",
              "Project": "DevOps_Final"
            },
            "vpc_id": "vpc-07b8c9d9daf04cab3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:676278186890:subnet/subnet-02503ba9716c1627a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02503ba9716c1627a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "676278186890",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mgabbas-devops-public-2"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "mgabbas-devops-public-2",
              "Owner": "Muhammad Ghulam Abbas",
              "Project": "DevOps_Final"
            },
            "vpc_id": "vpc-07b8c9d9daf04cab3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:676278186890:vpc/vpc-07b8c9d9daf04cab3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06c6317d860b4fe00",
            "default_route_table_id": "rtb-0d90dd9a779f36571",
            "default_security_group_id": "sg-0b08325bd75543e4f",
            "dhcp_options_id": "dopt-0353f8986ecd78a54",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07b8c9d9daf04cab3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d90dd9a779f36571",
            "owner_id": "676278186890",
            "tags": {
              "Name": "mgabbas-devops-vpc"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "mgabbas-devops-vpc",
              "Owner": "Muhammad Ghulam Abbas",
              "Project": "DevOps_Final"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:676278186890:security-group/sg-0ed44fd30be766565",
            "description": "Allow inbound from internet on ports 80 and 443",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ed44fd30be766565",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "mgabbas-devops-alb-sg",
            "name_prefix": "",
            "owner_id": "676278186890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mgabbas-devops-alb-sg"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "mgabbas-devops-alb-sg",
              "Owner": "Muhammad Ghulam Abbas",
              "Project": "DevOps_Final"
            },
            "timeouts": null,
            "vpc_id": "vpc-07b8c9d9daf04cab3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bi_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:676278186890:security-group/sg-0394b4839f9b739fb",
            "description": "Allow access for Metabase",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0394b4839f9b739fb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "mgabbas-devops-bi-sg",
            "name_prefix": "",
            "owner_id": "676278186890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mgabbas-devops-bi-sg"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "mgabbas-devops-bi-sg",
              "Owner": "Muhammad Ghulam Abbas",
              "Project": "DevOps_Final"
            },
            "timeouts": null,
            "vpc_id": "vpc-07b8c9d9daf04cab3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:676278186890:security-group/sg-092635fbcfae99cc0",
            "description": "Allow SSH, HTTP, HTTPS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-092635fbcfae99cc0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "mgabbas-devops-ec2-sg",
            "name_prefix": "",
            "owner_id": "676278186890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mgabbas-devops-ec2-sg"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "mgabbas-devops-ec2-sg",
              "Owner": "Muhammad Ghulam Abbas",
              "Project": "DevOps_Final"
            },
            "timeouts": null,
            "vpc_id": "vpc-07b8c9d9daf04cab3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:676278186890:security-group/sg-0dc7113b400acfea7",
            "description": "Allow MySQL and PostgreSQL from EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dc7113b400acfea7",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0394b4839f9b739fb"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0394b4839f9b739fb"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "mgabbas-devops-rds-sg",
            "name_prefix": "",
            "owner_id": "676278186890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mgabbas-devops-rds-sg"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "mgabbas-devops-rds-sg",
              "Owner": "Muhammad Ghulam Abbas",
              "Project": "DevOps_Final"
            },
            "timeouts": null,
            "vpc_id": "vpc-07b8c9d9daf04cab3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.security_groups.aws_security_group.bi_sg"
          ]
        }
      ]
    },
    {
      "module": "module.target_group",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:676278186890:targetgroup/mgabbas-devops-tg/5dcf90df853ab4b4",
            "arn_suffix": "targetgroup/mgabbas-devops-tg/5dcf90df853ab4b4",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:676278186890:targetgroup/mgabbas-devops-tg/5dcf90df853ab4b4",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "mgabbas-devops-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Environment": "Dev",
              "Owner": "Muhammad Ghulam Abbas",
              "Project": "DevOps_Final"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-07b8c9d9daf04cab3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}